Closed Bug 1743607 Opened 4 years ago Closed 4 years ago

[MIPS64] Fix indirect stubs on mips64 platform

Categories

(Core :: JavaScript: WebAssembly, defect, P1)

Firefox 96
Other
Unspecified
defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox95 --- unaffected
firefox96 --- fixed
firefox97 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

D131625 added indirect stubs, but caused some wasm tests failures on mips64 platform. And it seems to be caused be the following code:

#if defined(JS_CODEGEN_MIPS64)
  masm.as_jr(ra);
#elif defined(JS_CODEGEN_ARM64)

Since MIPS64 have delay slots, we should append a nop to the jump instruction, otherwise the next instruction will be accidently executed.

Blocks: sm-mips
Regressed by: 1742053
Has Regression Range: --- → yes
Severity: -- → S3
Priority: -- → P1
Assignee: nobody → zhaojiazhong-hf
Pushed by lhansen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/52a8ec8e1dd2 [MIPS64] Fix jr instruction usage in indirect stubs. r=lth
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

The patch landed in nightly and beta is affected.
:zhaojiazhong-hf, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(zhaojiazhong-hf)

Comment on attachment 9253048 [details]
Bug 1743607 - [MIPS64] Fix jr instruction usage in indirect stubs. r=lth

Beta/Release Uplift Approval Request

  • User impact if declined: Some wasm programs may crash on MIPS64 machines.
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It's a small bugfix and only affects MIPS64 platform.
  • String changes made/needed:
Flags: needinfo?(zhaojiazhong-hf)
Attachment #9253048 - Flags: approval-mozilla-beta?

Comment on attachment 9253048 [details]
Bug 1743607 - [MIPS64] Fix jr instruction usage in indirect stubs. r=lth

Approved for 96.0b4

Attachment #9253048 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: