Bug 1743607 - [MIPS64] Fix jr instruction usage in indirect stubs. r=lth, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D132483